Testing on iphone showed the input submit buttons were getting a default ios style. Add code to over ride this and make it the correct theme style.

--- a/wp-content/themes/sydneytheme/style.css
+++ b/wp-content/themes/sydneytheme/style.css
@@ -2657,7 +2657,12 @@ a.next.page-numbers:active {
     margin-top: 25px;
     padding: 20px 28px;
     letter-spacing: 1.2px;
-    border: none; }
+    border: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: 0px !important;
+    background-image: none !important; }
     @media (min-width: 48em) {
       .contact-map-wrapper .wpgmza_sl_search_button_3 {
         padding: 23px 44px;
@@ -3252,7 +3257,12 @@ BUTTONS
   line-height: 1.6;
   font-weight: 300;
   border: none;
-  outline: none; }
+  outline: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 0px !important;
+  background-image: none !important; }
   @media (min-width: 48em) {
     .sydney-button {
       padding: 16px;
